--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,5 +1,5 @@
 <h1>Recommendations</h1>
-
+<%= image_tag("https://media.giphy.com/media/3og0IMJcSI8p6hYQXS/giphy.gif") %>
 
 <% @stories.each do |story| %>
   <h2><%= story.headline %></h2>
