changed name of app

--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Recommendations</h1>
+<h1>The More You Know</h1>
 <%= image_tag("https://media.giphy.com/media/3og0IMJcSI8p6hYQXS/giphy.gif") %>
 
 <% @stories.each do |story| %>
